kubernetes/04_application/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: a-cordes-backend
    namespace: a-cordes
    annotations:
        config.nsm.nginx.com/default-egress-allowed: "true"
        config.nsm.nginx.com/enable-egress: "true"
spec:
    replicas: 3
    selector:
        matchLabels:
            app: a-cordes-backend
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: a-cordes-backend
        spec:
            containers:
                - image: felipebogaertsm/a_cordes_backend@sha256:55a120355120f56e7413b83e6cb2b2b38bb47b1462ba77de77e3d5fe5772ae2d
                  imagePullPolicy: Always
                  name: a-cordes-backend
                  ports:
                      - containerPort: 8000
                        name: gunicorn
            dnsPolicy: ClusterFirst
            imagePullSecrets:
                - name: registry-credentials
            securityContext: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
    name: a-cordes-backend
    namespace: a-cordes
spec:
    type: ClusterIP
    selector:
        app: a-cordes-backend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000 # must match the deployment's port
