kubernetes/04_application/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-cordes-frontend
  namespace: a-cordes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: a-cordes-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: a-cordes-frontend
    spec:
      containers:
        - image: felipebogaertsm/a_cordes_frontend@sha256:0cdb44c4103ec19f088797c94190881214de22f7d5c49cae2406f614824ac090
          imagePullPolicy: Always
          name: a-cordes-frontend
          ports:
            - containerPort: 3000
              name: react
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: registry-credentials
      securityContext: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
    name: a-cordes-frontend
    namespace: a-cordes
spec:
    type: ClusterIP
    selector:
        app: a-cordes-frontend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000 # must match the deployment file's port
